// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      Possible Rotation
      <span
        className="value"
      >
        1
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <div
          className="control nest-rotations"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={1}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={1}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
    >
      Possible Rotation
      <span
        className="value"
      >
        2
      </span>
    </p>
    <label
      className="accordion-body"
    >
      <div>
        <div
          className="control nest-rotations"
        >
          <UnitInput
            abbr={false}
            className={Object {}}
            decimal={0}
            defaultValue={2}
            disabled={false}
            displayMultiValue={false}
            forceUsePropsUnit={false}
            getValue={[Function]}
            isDoOnInput={false}
            max={9007199254740991}
            min={1}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            step={1}
            type="text"
            unit=""
          />
        </div>
      </div>
    </label>
  </label>
</div>
`;
